changes in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
+
 {
-  "name": "expresstest",
+  "name": "expresstest2Xsafasdf::::::",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
