Changes from google cloud server

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "expresstest2Xsafasdf::::::",
+  "name": "expresstest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
